--- a/_includes/scss/_settings.scss
+++ b/_includes/scss/_settings.scss
@@ -49,7 +49,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(960);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #ca61dc,
+//  primary: #ca61dc,
+  primary: #6a5095,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
