Added in logo in SVG format.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,10 @@
   <div class="top-bar" id="example-menu">
     <div class="top-bar-left">
       <ul class="dropdown menu" data-dropdown-menu>
-        <li class="menuitem"><a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+        <li class="menuitem"><a href="{{ site.baseurl }}/" class="logo">
+          <img src="{{ site.baseurl }}images/logo-inverse.svg">
+          {{ site.title }}
+        </a></li>
         <!--
         <li class="menuitem logo"><a href="{{ site.baseurl }}/">
         <img src="http://www.unicorn.se/images/logo.png">
