Fixed the logo paths.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <div class="top-bar-left">
       <ul class="dropdown menu" data-dropdown-menu>
         <li class="menuitem"><a href="{{ site.baseurl }}/" class="logo">
-          <img src="{{ site.baseurl }}images/logo-inverse.svg">
+          <img src="{{ "/images/logo-inverse.svg" | prepend: site.baseurl }}">
           {{ site.title }}
         </a></li>
         <!--
